[기능] 튜토리얼 완성
게임 시스템 확립 및 튜토리얼 완성

Known issue
연속된 노트에서 판정이 겹치는 문제
이유: static 때문이라고 생각함...

--- a/콘솔게임프로젝트.csproj
+++ b/콘솔게임프로젝트.csproj
@@ -43,7 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character\DrawL.cs" />
+    <Compile Include="Character\DrawR.cs" />
+    <Compile Include="Character\PlayerBeat.cs" />
+    <Compile Include="Character\Spawn.cs" />
+    <Compile Include="Scene\GameOver.cs" />
     <Compile Include="Scene\Stage1.cs" />
+    <Compile Include="Character\Draw.cs" />
+    <Compile Include="Util\Coroutine.cs" />
     <Compile Include="Util\Debug.cs" />
     <Compile Include="UI\LogScene.cs" />
     <Compile Include="Scene\Stages.cs" />
