[Edit] 버그 수정 및 리펙토링 + 첫단계 작성중
여러 버그를 수정했지만
비트의 배열화 작업에 너무 많은 버그가 있어서 거긴 리펙토링 하지 못하였다

--- a/콘솔게임프로젝트.csproj
+++ b/콘솔게임프로젝트.csproj
@@ -44,9 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Character\DrawL.cs" />
+    <Compile Include="Character\DrawObj.cs" />
     <Compile Include="Character\DrawR.cs" />
     <Compile Include="Character\PlayerBeat.cs" />
-    <Compile Include="Character\Spawn.cs" />
+    <Compile Include="Factory\Spawn.cs" />
+    <Compile Include="Factory\SpawnAlt.cs" />
     <Compile Include="Scene\GameOver.cs" />
     <Compile Include="Scene\Stage1.cs" />
     <Compile Include="Character\Draw.cs" />
@@ -66,6 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Properties\리듬패턴.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
