[기능] 스테이지 1 완성, 자잘한 버그잡기
스테이지 1의 게임성을 살렸다
자잘한 버그를 개선했으나 코드적으로 고질적인 문제라던지 good 타이밍이 늘어지면 잔상이 남는디테일까진 손보진 못했다

개선사항:
플레이어 위치 6을 기준으로 각종 개념이 하드코딩 되어있다
플레이어 마커를 추가해서 개선가능해 보이지만 많은 코드를 수정해야 한다
확장 연출이 필요하면 고쳐야 한다

지금 스테이지에서는 잘 작동함

--- a/콘솔게임프로젝트.csproj
+++ b/콘솔게임프로젝트.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Scene\GameOver.cs" />
     <Compile Include="Scene\Stage1.cs" />
     <Compile Include="Character\Draw.cs" />
+    <Compile Include="Scene\Stage2.cs" />
     <Compile Include="Util\Coroutine.cs" />
     <Compile Include="Util\Debug.cs" />
     <Compile Include="UI\LogScene.cs" />
